--- a/packages/react-select/package.json
+++ b/packages/react-select/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-select",
+  "name": "react-select-module",
   "version": "3.2.2",
   "description": "A Select control built with and for ReactJS",
   "main": "dist/react-select.cjs.js",
