--- a/packages/react-select/base/package.json
+++ b/packages/react-select/base/package.json
@@ -7,5 +7,21 @@
   },
   "preconstruct": {
     "source": "../src/Select"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/react-select.esm.js",
+      "require": "./dist/react-select.cjs.js",
+      "browser": {
+        "import": "./dist/react-select.browser.esm.js",
+        "require": "./dist/react-select.browser.cjs.js"
+      }
+    },
+    "./dist/react-select.cjs.js": {
+      "default": "./dist/react-select.cjs.js"
+    },
+    "./dist/react-select.esm.js": {
+      "default": "./dist/react-select.esm.js"
+    }
   }
 }
